--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "frkskyweb",
+  "name": "skyweb",
   "description": "Unofficial Skype API for nodejs via 'Skype (HTTP)'",
   "version": "0.2.1",
   "license": "MIT",
   "main": "./dist/src/skyweb.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/FrankSunnyvale/skyweb.git"
+    "url": "git://github.com/aw9/skyweb.git"
   },
   "keywords": [
     "Skype"
